Add workshops to events. Fix button wrap

--- a/events.html
+++ b/events.html
@@ -126,12 +126,52 @@
     </div> <!-- end of ex-basic-1 -->
     <!-- end of breadcrumbs -->
 
-
-    <!-- Terms Content -->
-    <div class="ex-basic-2">
+    <!-- Event Content -->
+    <div class="ex-basic-2" id="latest">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
+                    <div class="text-container">
+                        <h3>Member Workshops</h3>
+                        <p>While we are a student-led initiative consisting of members with
+                            beginner-intermediate experience, we
+                            are committed in ensuring that the projects we produce are of the highest quality possible.
+                            <br />
+                            To
+                            equip our members better, we are hosting workshops that tackle some of the most important
+                            fundamental aspects in Software Development.
+                        </p>
+
+                        <!--Workshop Event-->
+                        <div>
+                            <h4>Software Design and Requirements Gathering + Agile Software
+                                Development
+                                <br />Workshop
+                            </h4>
+                            <h5 class="">March 7, 2020 @ Benevity HQ</h5>
+                            <p class="">In this
+                                workshop, members will get a feel on how to gather the business problems brought
+                                on by a project and translate that into a problem better understood from a software
+                                developer standpoint. We will also be covering how to approach an agile software
+                                development workflow to improve efficiency and collaboration.
+                            </p>
+
+                            <h5>Hosted By</h5>
+                            <p>Priyash Bista & Sheldon Fuchs</p>
+                        </div>
+
+                        <!--Workshop Event-->
+                        <div hidden>
+                            <h4>Git + Security Fundamentals
+                                <br />Workshop
+                            </h4>
+                            <h5>TBD</h5>
+                            <p>
+                            </p>
+                        </div>
+
+                    </div> <!-- end of text-container -->
+
                     <div class="text-container">
                         <h3>Jan 29 2020: Code the Change Club Info Night</h3>
                         <p>Join us on January 29th to find out more about what we want to do at Code the Change and
@@ -161,7 +201,7 @@
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of ex-basic -->
-    <!-- end of terms content -->
+    <!-- end of Event content -->
 
 
     <!-- Breadcrumbs -->
