--- a/index.html
+++ b/index.html
@@ -112,12 +112,17 @@
                             <h1><span class="turquoise">Code The Change</span> <span class="red">YYC</span></h1>
                             <p class="p-large">Welcome to the Calgary chapter of Code The Change.
                             </p>
-                            <div class="d-flex">
-                                <div class="col-sm-auto">
-                                    <a class="btn-solid-lg page-scroll m-1" href="#students">Students</a>
-                                    <a class="btn-solid-lg page-scroll m-1" href="#causes">Causes</a>
-                                    <a class="btn-solid-lg page-scroll m-1" href="#mentors">Mentors</a>
-                                    <a class="btn-solid-lg page-scroll m-1" href="sponsors.html">Sponsors</a>
+                            <div class="row btn-group">
+                                <div class="col-sm-auto p-0">
+                                    <div class="col p-0">
+                                        <a class="btn-solid-lg page-scroll m-1" href="#students">Students</a>
+                                        <a class="btn-solid-lg page-scroll m-1" href="#causes">Causes</a>
+                                    </div>
+                                    <div class="w-100"></div>
+                                    <div class="col p-0">
+                                        <a class="btn-solid-lg page-scroll m-1" href="#mentors">Mentors</a>
+                                        <a class="btn-solid-lg page-scroll m-1" href="sponsors.html">Sponsors</a>
+                                    </div>
                                 </div>
                             </div>
 
@@ -134,36 +139,28 @@
     </header> <!-- end of header -->
     <!-- end of header -->
 
-    <!-- Events promo -->
-    <div id="applications" class="cards-1 d-none">
+    <!-- Latest Updates -->
+    <div id="applications" class="cards-1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Applications are now open!</h2>
-                    <p class="p-heading p-large">Interested in joining the largest student-led code for good groups in
-                        Calgary? Applications are open
-                        till <b>February 14, 2020 11:59pm.</b>
+                    <h2>Latest Updates</h2>
+                    <h3>Member Workshop Events</h3>
+                    <p class="p-heading p-large my-4">While we are a student-led initiative consisting of members with
+                        beginner-intermediate experience, we
+                        are committed in ensuring that the projects we produce are of the highest quality possible.
+                        <br />
+                        To
+                        equip our members better, we are hosting workshops that tackle some of the most important
+                        fundamental aspects in Software Development.
                     </p>
-
-                    <div class="m-4">
-                        <h4 class="p-large">If you are interested in joining a team and working directly on a
-                            project, <br /> please fill out the
-                            Programmer Application Form.</h4>
-                        <a class="btn-solid-lg"
-                            href="https://docs.google.com/forms/d/e/1FAIpQLScUPNsq5qOc9530bkgJ-5Jo57Wiq4kb2PILFPs8s-GZ-doCqw/viewform">Programmer
-                            Application Form</a>
-                    </div>
-
-                    <div class="m-4">
-                        <h4 class=" p-large">If you are interested in joining an internal admin role, <br />please fill
-                            out the Admin Application Form.</h4>
-                        <a class="btn-solid-lg"
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSdAIBmGULRIHRX9sGb9vKcXaEDZozbMNClBSKmG0cCKnPZ_hQ/viewform">Admin
-                            Application Form</a>
+                    <div>
+                        <a class="btn-solid-reg page-scroll" href="events.html#latest">DETAILS</a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <!-- Services -->
@@ -588,23 +585,7 @@
                     </div> <!-- end of team-member -->
                     <!-- end of team member -->
 
-                    <!-- Team Member -->
-                    <div class="team-member">
-                        <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_team/_kony.png" alt="alternative">
-                        </div> <!-- end of image wrapper -->
-                        <p class="p-large"><strong>Kieran Konynenbelt</strong></p>
-                        <p class="job-title">UofC Leader</p>
-                        <span class="social-icons">
-                            <span class="fa-stack">
-                                <a href=https://www.linkedin.com/groups/1843315> <i
-                                        class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
-                                </a>
-                            </span>
-                        </span> <!-- end of social-icons -->
-                    </div> <!-- end of team-member -->
-                    <!-- end of team member -->
+
 
                     <!-- Team Member -->
                     <div class="team-member">
@@ -633,9 +614,15 @@
                         <p class="job-title">VP of Marketing</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/cgarrovillo> <i
-                                        class="fas fa-circle fa-stack-2x"></i>
+                                <a href=https://www.linkedin.com/in/cgarrovillo>
+                                    <i class="fas fa-circle fa-stack-2x"></i>
                                     <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                </a>
+                            </span>
+                            <span class="fa-stack">
+                                <a href=https://cgarrovillo.github.io>
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fas fa-code fa-stack-1x"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -708,6 +695,24 @@
                         <span class="social-icons">
                             <span class="fa-stack">
                                 <a href=https://www.linkedin.com/in/priyash> <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                </a>
+                            </span>
+                        </span> <!-- end of social-icons -->
+                    </div> <!-- end of team-member -->
+                    <!-- end of team member -->
+
+                    <!-- Team Member -->
+                    <div class="team-member">
+                        <div class="image-wrapper">
+                            <img class="img-fluid" src="images/_team/_kony.png" alt="alternative">
+                        </div> <!-- end of image wrapper -->
+                        <p class="p-large"><strong>Kieran Konynenbelt</strong></p>
+                        <p class="job-title">Software Developer @ <br />Benevity</p>
+                        <span class="social-icons">
+                            <span class="fa-stack">
+                                <a href=https://www.linkedin.com/groups/1843315> <i
+                                        class="fas fa-circle fa-stack-2x"></i>
                                     <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
