--- a/members.html
+++ b/members.html
@@ -138,7 +138,7 @@
                 <div class="col-lg-12">
                     <h2>Project intake has now closed.</h2>
                     <p class="p-heading p-large">However, don't let this discourage you! We are still accepting
-                        applications in the case a new project becomes available, or if an existing project requires
+                        applications in case a new project becomes available, or if an existing project requires
                         more
                         members than expected.
                     </p>
