Have consistent icon art direction. Fix few links

--- a/causes.html
+++ b/causes.html
@@ -89,10 +89,10 @@
                 <!-- end of dropdown menus -->
 
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#about">About</a>
+                    <a class="nav-link page-scroll" href="index.html#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#contact">Contact</a>
+                    <a class="nav-link page-scroll" href="index.html#contact">Contact</a>
                 </li>
             </ul>
         </div>
