--- a/events.html
+++ b/events.html
@@ -88,10 +88,10 @@
                 <!-- end of dropdown menus -->
 
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#about">About</a>
+                    <a class="nav-link page-scroll" href="index.html#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#contact">Contact</a>
+                    <a class="nav-link page-scroll" href="index.html#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -132,6 +132,7 @@
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
                     <div class="text-container">
+                        <hr />
                         <h3>Member Workshops</h3>
                         <p>While we are a student-led initiative consisting of members with
                             beginner-intermediate experience, we
@@ -148,7 +149,11 @@
                                 Development
                                 <br />Workshop
                             </h4>
-                            <h5 class="">March 7, 2020 @ Benevity HQ</h5>
+                            <a href="https://goo.gl/maps/aCtFE2T9exMoL83m6">
+                                <h5 class="">March 7, 2020 @ Benevity
+                                    HQ </h5>
+                            </a>
+
                             <p class="">In this
                                 workshop, members will get a feel on how to gather the business problems brought
                                 on by a project and translate that into a problem better understood from a software
@@ -171,6 +176,8 @@
                         </div>
 
                     </div> <!-- end of text-container -->
+
+                    <hr />
 
                     <div class="text-container">
                         <h3>Jan 29 2020: Code the Change Club Info Night</h3>
