--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </li>
                 <!-- Registration Dropdown Menu -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle page-scroll" href="" id="navbarDropdown" role="button"
                         aria-haspopup="true" aria-expanded="false">Sign Up</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item page-scroll" href="members.html"><span class="item-text">Member
@@ -155,7 +155,7 @@
                         fundamental aspects in Software Development.
                     </p>
                     <div>
-                        <a class="btn-solid-reg page-scroll" href="events.html#latest">DETAILS</a>
+                        <a class="btn-solid-reg page-scroll" href="events.html#latest">Details</a>
                     </div>
                 </div>
             </div>
@@ -227,7 +227,7 @@
                                 Founded at Stanford University, Code The Change has spread to campuses across the US and
                                 Canada.
                             </p>
-                            <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">DETAILS</a>
+                            <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">Details</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
@@ -276,7 +276,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-2">DETAILS</a>
+                            <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-2">Details</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -304,7 +304,7 @@
                                 getting developed and
                                 made more robust.
                             </p>
-                            <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-3">DETAILS</a>
+                            <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-3">Details</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
@@ -376,7 +376,7 @@
                 <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
                 <div class="col-lg-8">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/_growth.jpg" alt="alternative">
+                        <img class="img-fluid" src="images/_causesVector.jpg" alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
@@ -497,7 +497,7 @@
                     <!-- Card -->
                     <div class="card">
                         <a href="events.html">
-                            <img class="card-image" src="images/_calendar.svg" alt="alternative">
+                            <img class="card-image" src="images/_calendar2.svg" alt="alternative">
                             <div class="card-body">
                                 <h4 class="card-title">Upcoming Events</h4>
                             </div>
@@ -508,7 +508,7 @@
                     <!-- Card -->
                     <div class="card">
                         <a href="projects.html">
-                            <img class="card-image" src="images/_projects.svg" alt="alternative">
+                            <img class="card-image" src="images/_projects3.svg" alt="alternative">
                             <div class="card-body">
                                 <h4 class="card-title">Our Projects</h4>
                             </div>
@@ -519,7 +519,7 @@
                     <!-- Card -->
                     <div class="card">
                         <a href="causes.html">
-                            <img class="card-image" src="images/_signup.svg" alt="alternative">
+                            <img class="card-image" src="images/_signup2.svg" alt="alternative">
                             <div class="card-body">
                                 <h4 class="card-title">Cause Project Submission</h4>
                             </div>
@@ -876,7 +876,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p class="p-small">Copyright © Code The Change YYC.<br />Web Page Template by <a
-                            href="https://inovatik.com">Inovatik.</a></p>
+                            href="https://inovatik.com">Inovatik.</a> Icons from Flaticon.</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
