--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                 <!-- end of dropdown menus -->
 
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#about">About</a>
+                    <a class="nav-link page-scroll" href="index.html#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#contact">Contact</a>
+                    <a class="nav-link page-scroll" href="index.html#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -559,9 +559,9 @@
                         <p class="job-title">Co-President</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/ckthiessen> <i
-                                        class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/in/ckthiessen>
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x" id="cole"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -576,9 +576,9 @@
                         <p class="job-title">Co-President</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/aribaanees> <i
-                                        class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/in/aribaanees>
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x" id="ariba"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -596,9 +596,9 @@
                         <p class="job-title">VP of Finance</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/dustin-king-30932a193> <i
-                                        class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/in/dustin-king-30932a193>
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x" id="dustin"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -616,13 +616,13 @@
                             <span class="fa-stack">
                                 <a href=https://www.linkedin.com/in/cgarrovillo>
                                     <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x" id="christian-ln"></i>
                                 </a>
                             </span>
                             <span class="fa-stack">
                                 <a href=https://cgarrovillo.github.io>
                                     <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fas fa-code fa-stack-1x"></i>
+                                    <i class="fas fa-code fa-stack-1x" id="christian-gh"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -638,9 +638,9 @@
                         <p class="job-title">Tech Director</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/jofred-cayabyab> <i
-                                        class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/in/jofred-cayabyab>
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x" id="jayjay"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -656,9 +656,9 @@
                         <p class="job-title">VP of Tech</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/avneet-gill-223a87177> <i
-                                        class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/in/avneet-gill-223a87177>
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x" id="avneet"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -678,7 +678,7 @@
                         <span class="social-icons">
                             <span class="fa-stack">
                                 <a href=https://www.linkedin.com/in/rostoker> <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x" id="camillo"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -695,7 +695,7 @@
                         <span class="social-icons">
                             <span class="fa-stack">
                                 <a href=https://www.linkedin.com/in/priyash> <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x" id="priyash"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -711,9 +711,9 @@
                         <p class="job-title">Software Developer @ <br />Benevity</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/groups/1843315> <i
-                                        class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/groups/1843315>
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x" id="kieran"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
@@ -729,8 +729,9 @@
                         <p class="job-title">Software Developer @ <br />Benevity</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/hfirdaus> <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <a href=https://www.linkedin.com/in/hfirdaus>
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x" id="hadiya"></i>
                                 </a>
                             </span>
                         </span> <!-- end of social-icons -->
