changes registration text

--- a/members.html
+++ b/members.html
@@ -136,11 +136,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Project intake has now closed.</h2>
+                    <!-- <h2>Project intake has now closed.</h2>
                     <p class="p-heading p-large">However, don't let this discourage you! We are still accepting
                         applications in case a new project becomes available, or if an existing project requires
                         more
                         members than expected.
+                    </p> -->
+                    <h2>Registration is now open!</h2>
+                    <p class="p-heading p-large">To accomodate our Summer 2020 project intake,
+                        we are recruiting executive roles with various responsibilities to aid our cause in helping
+                        non-profits.
                     </p>
 
                     <div class="m-4" hidden>
