--- a/members.html
+++ b/members.html
@@ -6,12 +6,12 @@
 <head>
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
-        w[l] = w[l] || []; w[l].push({
-            'gtm.start':
-                new Date().getTime(), event: 'gtm.js'
-        }); var f = d.getElementsByTagName(s)[0],
-            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-N8QM4GS');</script>
     <!-- End Google Tag Manager -->
 
@@ -158,7 +158,7 @@
                         members than expected.
                     </p> -->
                     <h2>Registration is now open!</h2>
-                    <p class="p-heading p-large">To accomodate our Summer 2020 project intake,
+                    <p class="p-heading p-large">To accommodate our Summer 2020 project intake,
                         we are recruiting executive roles with various responsibilities to aid our cause in helping
                         non-profits.
                     </p>
