added Oscar to About Section

--- a/index.html
+++ b/index.html
@@ -680,6 +680,30 @@
                     </div> <!-- end of team-member -->
                     <!-- end of team member -->
 
+                    <!-- Team Member -->
+                    <div class="team-member">
+                        <div class="image-wrapper">
+                            <img class="img-fluid" src="images/_team/_oscar.jpg" alt="alternative">
+                        </div> <!-- end of image wrapper -->
+                        <p class="p-large"><strong>Oscar Wong</strong></p>
+                        <p class="job-title">VP of Tech</p>
+                        <span class="social-icons">
+                            <span class="fa-stack">
+                                <a href=https://www.linkedin.com/in/oscarwong67/>
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x" id="oscar"></i>
+                                </a>
+                            </span>
+                            <span class="fa-stack">
+                                <a href=https://oscarwong.me>
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fas fa-code fa-stack-1x" id="oscar-gh"></i>
+                                </a>
+                            </span>
+                        </span> <!-- end of social-icons -->
+                    </div> <!-- end of team-member -->
+                    <!-- end of team member -->
+
                     <h4>External Advisors</h4>
                     <br />
                     <!-- Team Member -->
